--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nextarter-chakra",
+  "name": "safe-meds",
   "version": "0.1.0",
   "private": true,
-  "author": "sozonome",
+  "author": "Hadi Chaudhri, Aarnav Jindhal, Aaron Hsu, Eric Liu, Arvindh Manian",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
