--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "nextarter-chakra",
-  "name": "Next.js App Template",
+  "short_name": "SmartMeds",
+  "name": "SmartMeds",
   "lang": "en",
   "start_url": "/",
   "background_color": "#FFFFFF",
