feat(pages): change url, titles

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SmartMeds",
-  "name": "SmartMeds",
+  "short_name": "SafeMeds",
+  "name": "SafeMeds",
   "lang": "en",
   "start_url": "/",
   "background_color": "#FFFFFF",
