--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "safe-meds",
   "version": "0.1.0",
   "private": true,
-  "author": "Hadi Chaudhri, Aarnav Jindhal, Aaron Hsu, Eric Liu, Arvindh Manian",
+  "author": "Hadi Chaudhri, Arnav Jindhal, Aaron Hsu, Eric Liu, Arvindh Manian",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,10 +22,12 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@types/pg": "^8.6.5",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.5.0",
+    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
