--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "chakra-ui-date-input": "^1.0.0",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
