--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
+    "@chakra-ui/transition": "^2.0.11",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@types/pg": "^8.6.5",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
+    "next-auth": "^4.14.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.5.0",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
