--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
+    "@choc-ui/chakra-autocomplete": "^5.1.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "axios": "^1.1.3",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "next-pwa": "^5.6.0",
