--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@faker-js/faker": "^7.6.0",
     "@types/pg": "^8.6.5",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
