--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@choc-ui/chakra-autocomplete": "^5.1.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@faker-js/faker": "^7.6.0",
     "axios": "^1.1.3",
     "@chakra-ui/transition": "^2.0.11",
     "@types/pg": "^8.6.5",
