--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
+    "@chakra-ui/transition": "^2.0.11",
     "@choc-ui/chakra-autocomplete": "^5.1.2",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@faker-js/faker": "^7.6.0",
-    "axios": "^1.1.3",
-    "@chakra-ui/transition": "^2.0.11",
     "@types/pg": "^8.6.5",
+    "axios": "^1.1.3",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "next-auth": "^4.14.0",
@@ -36,12 +36,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@commitlint/cz-commitlint": "^17.1.2",
     "@types/react": "^18.0.21",
+    "@types/uuid": "^8.3.4",
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "cross-env": "^7.0.3",
