--- a/package.json
+++ b/package.json
@@ -26,21 +26,28 @@
     "@emotion/styled": "^11.10.4",
     "@types/pg": "^8.6.5",
     "axios": "^1.1.3",
+    "chakra-ui-date-input": "^1.0.0",
+    "choc-datetimepicker": "^0.13.2",
     "framer-motion": "^7.3.6",
+    "moedim": "^0.5.0",
     "next": "^12.3.1",
     "next-auth": "^4.14.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.5.0",
     "pg": "^8.8.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "sassy-datepicker": "^0.10.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@commitlint/cz-commitlint": "^17.1.2",
     "@types/react": "^18.0.21",
+    "@types/react-calendar": "^3.5.3",
     "commitizen": "^4.2.5",
     "commitlint": "^17.1.2",
     "cross-env": "^7.0.3",
